# NATflaskApp

./: README.md  docker-compose.yml
flask/: Dockerfile  requirements.txt
flask/app/: __init__.py  models.py  views.py  views1_mongo.py  views_api.py
flask/app/static/css/: bootstrap.css  bootstrap.min.css  datatables.min.css  sas.css  styles.css
flask/app/static/js/: datatables.min.js
flask/app/templates/: base.html  home.html  nat.html
nginx/: Dockerfile  nginx.conf  private.key  public.crt
script/: db_update.py  env_script.sh  pyproject.toml  sqlite_helper.py
