[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Harish Krishnoji - 10105547 <harish.krishnoji@fiserv.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-gitlab = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus-appdev.1dc.com/repository/pypi-group/simple"
default = true

[[tool.poetry.source]]
name = "gitlab"
url = "https://git-enterprise-jc.onefiserv.net/api/v4/projects/1656/packages/pypi/simple"
secondary = true